# Syntony

handvoice-scaffold-review/handvoice_mvp_scaffold/: .env.example  .gitignore  POWERSHELL_QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
handvoice-scaffold-review/handvoice_mvp_scaffold/configs/: protocol.v1.yaml
handvoice-scaffold-review/handvoice_mvp_scaffold/docs/: api-flow.md  architecture-decisions.md
handvoice-scaffold-review/handvoice_mvp_scaffold/scripts/: demo_api.py
handvoice-v2-review/handvoice_mvp_scaffold_v2/: .dockerignore  .env.example  .gitignore  HANDOFF_2026-07-22.md  Makefile  POWERSHELL_QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
handvoice-v2-review/handvoice_mvp_scaffold_v2/configs/: protocol.v1.yaml
handvoice-v2-review/handvoice_mvp_scaffold_v2/docs/: HandVoice_Canonical_Competition_MVP_v4.md  HandVoice_Clinical_Protocol_Review_Brief_v1.md  HandVoice_Conference_Validation_Plan_v1.md  HandVoice_DDK_Annotation_Protocol_v1.md  HandVoice_Evidence_Appendix_v1.md  HandVoice_Grill_Session_Report_2026-07-17.md  HandVoice_Measurement_Agreement_Protocol_v1.md  HandVoice_Motor_Event_Model_v1.md  HandVoice_Real_Person_Readiness_Plan_v1.md  HandVoice_Review_Remediation_v2.md  HandVoice_System_Architecture_2026-07-23.md  HandVoice_TrackB_Scalability_Roadmap_v1.md  README.md  api-flow.md  architecture-decisions.md
handvoice-v2-review/handvoice_mvp_scaffold_v2/handvoice_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
handvoice-v2-review/handvoice_mvp_scaffold_v2/migrations/: env.py
handvoice-v2-review/handvoice_mvp_scaffold_v2/scripts/: assemble_motor_training_manifest.py  demo_api.py  generate_submission_documents.py  run_native_demo.py  run_synthetic_validation.py  score_measurement_agreement.py  start_demo.ps1  start_demo_native.ps1  stop_demo_native.ps1  train_motor_event_model.py
(+145 files in other folders)
