[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handvoice-mvp"
version = "0.1.0"
description = "Synchronized hand-speech dual-task measurement scaffold"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.139.2",
  "starlette==1.3.1",
  "uvicorn[standard]==0.51.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "sqlalchemy==2.0.51",
  "alembic==1.16.5",
  "psycopg[binary]==3.3.4",
  "python-multipart==0.0.32",
  "PyYAML==6.0.3",
  "jsonschema==4.26.0",
  "numpy==2.5.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "httpx2==2.7.0",
  "ruff==0.15.22",
]
documents = [
  "python-docx==1.2.0",
  "pypdf==6.10.0",
  "reportlab==4.4.9",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
